Add Google Verification Tag

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 -->
 <html>
 	<head>
+        <meta name="google-site-verification" content="G616i0j_FPWAaVF2ksfczBtoVuw6Q0hi-FzepgqjK5Y" />
 		<title>Harshal Varday | hvarday.com</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
