Update meta og tags

--- a/index.html
+++ b/index.html
@@ -7,16 +7,22 @@
 <html>
 	<head>
         <meta name="google-site-verification" content="G616i0j_FPWAaVF2ksfczBtoVuw6Q0hi-FzepgqjK5Y" />
-		<title>Harshal Varday | hvarday.com</title>
-        <link rel="apple-touch-icon" sizes="180x180" href="images/favicon_io/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="images/favicon_io/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="images/favicon_io/favicon-16x16.png">
+		<meta property="og:title" content="" />
+		<meta property="og:site_name" content="Harshal Varday" />
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="http://hvarday.github.io" />
+		<meta property="og:image" content="http://hvarday.github.io/images/favicon_io/favicon-32x32.png" />
+        <meta property="og:description" content="Harshal Varday | hvarday.com" />
+        <meta name="description" content="Harshal Varday | hvarday.com" />
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<title>Harshal Varday | hvarday.com</title>
+		<link rel="apple-touch-icon" sizes="180x180" href="images/favicon_io/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="images/favicon_io/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="images/favicon_io/favicon-16x16.png">
         <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-        <meta name="description" content="Harshal Varday | hvarday.com">
 	</head>
 	<body class="is-preload">
 
