--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         <meta property="og:title" content="" />
         <meta property="og:site_name" content="Harshal Varday" />
         <meta property="og:type" content="website" />
-        <meta property="og:url" content="http://hvarday.github.io" />
-        <meta property="og:image" content="http://hvarday.github.io/images/favicon_io/favicon-32x32.png" />
+        <meta property="og:url" content="https://hvarday.github.io" />
+        <meta property="og:image" content="https://hvarday.github.io/images/Profile.jph" />
         <meta property="og:description" content="Harshal Varday | hvarday.com" />
         <meta name="description" content="Harshal Varday | hvarday.com" />
         <meta charset="utf-8" />
