--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <meta property="og:site_name" content="Harshal Varday" />
         <meta property="og:type" content="website" />
         <meta property="og:url" content="https://hvarday.github.io" />
-        <meta property="og:image" content="https://hvarday.github.io/images/Profile.jph" />
+        <meta property="og:image" content="https://hvarday.github.io/images/Profile.jpg" />
         <meta property="og:description" content="Harshal Varday | hvarday.com" />
         <meta name="description" content="Harshal Varday | hvarday.com" />
         <meta charset="utf-8" />
