Update meta tags

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <meta property="og:type" content="website" />
         <meta property="og:url" content="https://hvarday.github.io" />
         <meta property="og:image" content="https://hvarday.github.io/images/Profile.jpg" />
-        <meta property="og:description" content="Harshal Varday | hvarday.com" />
-        <meta name="description" content="Harshal Varday | hvarday.com" />
+        <meta name="description" property="og:description" content="Harshal Varday | hvarday.com" />
+        <meta name="author" content="Harshal Varday">
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
         <title>Harshal Varday | hvarday.com</title>
