--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
 -->
 <html>
     <head>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-176715129-1"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+          gtag('config', 'UA-176715129-1');
+        </script>
         <meta name="google-site-verification" content="G616i0j_FPWAaVF2ksfczBtoVuw6Q0hi-FzepgqjK5Y" />
         <meta property="og:title" content="" />
         <meta property="og:site_name" content="Harshal Varday" />
